<?xml version="1.0"?>
<package format="2">
  <name>packml_gui</name>
  <version>0.0.0</version>
  <description>GUI for packml control/display</description>
  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
  <license>Apache 2.0</license>
  <author>Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>packml_msgs</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosnode</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
